# montepath

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  roadmap.md
.github/workflows/: accelerator-competitors.yml  ci.yml  gpu-hardware.yml  publish-pypi.yml  python-package.yml
benchmarks/: README.md  improvement-plan.md  latest-results.json  reference-fixtures.json  release-results.json
benchmarks/competitors/: python_cpu_baselines.py  requirements-accelerators.txt
benchmarks/competitors/environments/: cupy.json  jax.json  numba.json  numpy.json  pytorch.json  quantlib.json  scipy-qmc.json
crates/mc-bench/src/: harness.rs  lib.rs  main.rs
crates/mc-bench/tests/: gates.rs  harness.rs
crates/mc-core/: Cargo.toml
crates/mc-core/src/: lib.rs
crates/mc-core/src/backend/: cuda.rs  metal.rs  mod.rs
crates/mc-core/src/backend/kernels/: european_call_stepwise_v1.metal
crates/mc-core/src/planner/: mod.rs
crates/mc-core/src/runtime/: cpu.rs  inventory.rs  mod.rs
crates/mc-core/tests/: cpu_runtime.rs  gpu_backend_contract.rs  inventory_runtime.rs  planner.rs
crates/mc-schema/: Cargo.toml
crates/mc-schema/src/: builder.rs  diagnostics.rs  lib.rs  schema.rs  validate.rs
crates/mc-schema/tests/: builder.rs  validation.rs
crates/montepath-python/: Cargo.toml
crates/montepath-python/src/: lib.rs
docs/: accelerator-competitor-benchmarking.md  agent-examples.json  agent-integration-plan.md  agent-tooling.md  architecture-plan.md  backend-contract.md  benchmark-gates.md  benchmark-plan.md  competitive-benchmark-policy.md  current-assessment.md  error-codes.md  flagship-competitiveness-plan.md  function-catalog.md  gpu-testing-strategy.md  install-profiles.md  inventory-simulation-plan.md  inventory-simulation.md  market-landscape.md  non-cuda-v1-completion-plan.md  planner-design.md  planner-intelligence.md  product-model-capability-catalog.json  product-model-capability-catalog.md  public-alpha.md  release-checklist.md  repository-rules.md  schema-draft.md  simulation-techniques.md  user-friendliness-research.md  uv-and-agent-install.md
docs/site/: agent-tools.md  api-reference.md  benchmark-interpretation.md  index.md  migration-notes.md  quickstart.md
notebooks/: engineering_benchmark_audit.ipynb  quant_pricing_quickstart.ipynb  researcher_uq_quickstart.ipynb
python/mc_library/: __init__.py  agent.py  planner_intelligence.py  pricing.py
python/montepath/: __init__.py  agent.py  benchmarks.py  inventory.py  mcp_server.py  methods.py  native.py  planner_intelligence.py  pricing.py  production.py
python/tests/: installed_package_smoke.py  test_agent_surface.py  test_api_compatibility.py  test_inventory.py  test_mcp_server.py  test_native_extension.py  test_planner_intelligence.py  test_python_surface.py
