[workspace]
members = [
  "crates/mc-schema",
  "crates/mc-core",
  "crates/mc-bench",
  "crates/montepath-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.1"
authors = ["montepath contributors"]
description = "Alpha agent-native Monte Carlo runtime components"
homepage = "https://github.com/IndarKarhana/montepath"
repository = "https://github.com/IndarKarhana/montepath"
documentation = "https://github.com/IndarKarhana/montepath/tree/main/docs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
