[project]
name = "mc-library"
version = "0.1.0"
description = "Python-facing helpers for the agent-native Monte Carlo runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
cpu = []
metal = []
cuda = []
dev = ["build>=1.2", "pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
include = ["mc_library*"]
exclude = ["tests*"]
