[project]
name = "montepath"
version = "0.2.0"
description = "Alpha agent-native Monte Carlo runtime with Rust CPU execution, Python APIs, and MCP tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "montepath contributors" }]
keywords = [
    "monte-carlo",
    "simulation",
    "quant-finance",
    "uncertainty-quantification",
    "mcp",
    "agents",
]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/IndarKarhana/montepath"
Documentation = "https://github.com/IndarKarhana/montepath/tree/main/docs"
Repository = "https://github.com/IndarKarhana/montepath"
Issues = "https://github.com/IndarKarhana/montepath/issues"

[project.scripts]
montepath-mcp = "montepath.mcp_server:main"

[project.optional-dependencies]
cpu = []
metal = []
cuda = []
dev = ["build>=1.2", "maturin>=1.7,<2", "pytest>=8"]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "crates/montepath-python/Cargo.toml"
module-name = "montepath._native"
python-source = "python"
