[package]
name = "mc-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
