[package]
name = "montepath-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
mc-core = { path = "../mc-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
